--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -4,24 +4,29 @@
 
 :root {
   // brand colors
-  --c-brand: #005e85;
-  --c-brand-light: #005e85;
+  --vp-c-brand: #005e85;
+  --vp-c-brand-light: #005e85;
+
+  // accent colors
+  --vp-c-accent: #005e85;
+  --vp-c-accent-bg: #005e85;
+  --vp-c-accent-hover: #005e85;
 
   // background colors
-  --c-bg: #ffffff;
-  --c-bg-light: #f3f4f5;
-  --c-bg-lighter: #eeeeee;
-  --c-bg-navbar: var(--c-bg-light);
+  --vp-c-bg: #ffffff;
+  --vp-c-bg-light: #f3f4f5;
+  --vp-c-bg-lighter: #eeeeee;
+  --vp-c-bg-navbar: var(--c-bg-light);
 
   // border colors
-  --c-border: #cfcfcf;
-  --c-border-dark: #dfe2e5;
+  --vp-c-border: #cfcfcf;
+  --vp-c-border-dark: #dfe2e5;
 
   // layout vars
   --navbar-height: 4rem;
 }
 
-.navbar {
+.vp-navbar {
   background-color: #005e85;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.50);
   border: none;
@@ -31,24 +36,27 @@
     display: none;
   }
 
-  .navbar-items-wrapper {
+  .vp-navbar-items-wrapper {
     font-size: 1.1rem;
     background-color: #005e85;
     color: white;
   }
 
-  .navbar-items {
+  .vp-navbar-items {
     a {
       &:hover,
       &.route-link-active {
         color: white;
         margin-bottom: -2px;
         border-bottom: 2px solid white;
-        }
+      }
+      &:after {
+        content: none;
+      }
     }
   }
 
-  .navbar-item > a:not(.external) {
+  .vp-navbar-item > a:not(.external) {
     &:hover,
     &.route-link-active {
       margin-bottom: -2px;
@@ -57,7 +65,7 @@
   }
 }
 
-.dropdown-wrapper {
+.vp-dropdown-wrapper {
   .dropdown-title {
     font-size: inherit;
     color: inherit;
@@ -74,6 +82,10 @@
       }
     }
   }
+}
+
+.vp-site-name {
+  display: none;
 }
 
 .toggle-sidebar-button {
